--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "app.js",
   "scripts": {
-    "dev": "node --watch app.js"
+    "dev": "node --env-file=.env --watch app.js"
   },
   "type": "module",
   "keywords": [
@@ -15,13 +15,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@libsql/client": "^0.9.0",
+    "cors": "2.8.5",
     "express": "4.19.2",
     "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "standard": "17.1.0"
-  },
-  "eslintConfig": {
-    "extends": "standard"
   }
 }
